--- a/css/uikit.css
+++ b/css/uikit.css
@@ -48,7 +48,7 @@ a:hover,
 .uk-link:hover,
 .uk-link-toggle:hover .uk-link,
 .uk-link-toggle:focus .uk-link {
-  color: #0f6ecd;
+  color: #FFFFFF;
   text-decoration: underline;
 }
 /* Text-level semantics
