--- a/css/uikit.css
+++ b/css/uikit.css
@@ -7586,7 +7586,7 @@ iframe.uk-cover {
 /* Color
  ========================================================================== */
 .uk-background-default {
-  background-color: #fff;
+  background-color: #000;
 }
 .uk-background-muted {
   background-color: #f8f8f8;
